# anki_local_tts

./: .gitignore  ANKIWEB.md  CLAUDE.md  LICENSE  README.md  manifest.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
local_tts/: __init__.py  _log.py  addon.py  audio.py  cache.py  config.json  config.py  manifest.json  player.py  presets.py  routing.py
local_tts/gui/: __init__.py  preset_editor.py  settings.py
local_tts/providers/: __init__.py  base.py  voicevox.py
local_tts/text/: auto_marker.py  cleanup.py  digit_kanji.py  regex_rules.py
scripts/: build_addon.py  dev_link.py  migrate_provider_endpoint.py
tests/: test_auto_marker.py  test_cache.py  test_cleanup.py  test_config.py  test_digit_kanji.py  test_presets.py  test_routing.py  test_voicevox.py
